[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CellOrigin"
version = "0.99"
description = "A package for predicting cell fate"
authors = [
    { name = "Junseo Seo", email = "juneseo99@kaist.ac.kr" },
    { name = "Hwisoo Choi", email = "chs1181@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["singlecell", "cell-fate", "Relative dimension", "MIC"]
requires-python = ">=3.6, <3.13"

dependencies = [
    "numpy>=1.18, <2.0",
    "minepy",
    "scanpy>=1.8"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
homepage = "https://github.com/Irrationall/CellOrigin"
repository = "https://github.com/Irrationall/CellOrigin"
issue-tracker = "https://github.com/Irrationall/CellOrigin/issues"

[tool.setuptools]
package-dir = {"" = "src"}

